ingress_test_2/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: "k8s-dev.eastus.cloudapp.azure.com"
      http:
        paths:
        - pathType: Prefix
          path: "/hello-kubernetes"
          backend:
            service:
              name: hello-kubernetes
              port:
                number: 80
