ingress_test_2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/hello-world"
          backend:
            service:
              name: hello-world-service
              port:
                number: 80
